src/components/modus-wc-file-dropzone/modus-wc-file-dropzone.scss
modus-wc-file-dropzone .modus-wc-file-dropzone {
  .modus-wc-file-input {
    display: none;
  }

  .dropzone-content {
    align-items: center;
    background-color: var(--modus-wc-color-gray-light);
    border: 0.125rem dashed var(--modus-wc-color-gray-6);
    color: var(--modus-wc-color-gray-6);
    cursor: pointer;
    display: flex;
    flex-direction: column;
    font-weight: 600;
    height: 201px;
    justify-content: center;
    padding: 0.75rem 1rem;
    transition: background-color 0.2s ease;
    width: 431px;

    &.dragging-over {
      background-color: var(--modus-wc-color-blue-pale);
      border-color: var(--modus-wc-color-trimble-blue);
      color: var(--modus-wc-color-gray-10);
    }

    &.invalid-file-type {
      background-color: color-mix(
        in sRGB,
        var(--modus-wc-color-red-pale) 80%,
        transparent
      );
      border-color: var(--modus-wc-color-red-dark);
      color: var(--modus-wc-color-gray-10);
    }

    &.upload-success {
      background-color: color-mix(
        in sRGB,
        var(--modus-wc-color-green-pale) 80%,
        transparent
      );
      border-color: var(--modus-wc-color-green-dark);
      color: var(--modus-wc-color-gray-10);
    }

    .default-content {
      align-items: center;
      display: flex;
      flex-direction: column;
      justify-content: center;

      span {
        text-align: center;
      }
    }
  }

  &:has(input:disabled) {
    .dropzone-content {
      background-color: var(--modus-wc-color-gray-0);
      border-color: var(--modus-wc-color-gray-6);
      color: var(--modus-wc-color-gray-6);
      cursor: not-allowed;
    }
  }
}

[data-theme='modus-classic-dark']
  modus-wc-file-dropzone
  .modus-wc-file-dropzone,
[data-theme='modus-modern-dark'] modus-wc-file-dropzone .modus-wc-file-dropzone,
[data-theme='connect-dark'] modus-wc-file-dropzone .modus-wc-file-dropzone {
  .dropzone-content {
    background-color: var(--modus-wc-color-gray-10);
    color: var(--modus-wc-color-gray-3);

    &.dragging-over {
      background-color: color-mix(
        in sRGB,
        var(--modus-wc-color-highlight-blue) 30%,
        transparent
      );
      border-color: var(--modus-wc-color-highlight-blue);
      color: var(--modus-wc-color-gray-light);
    }

    &.invalid-file-type {
      background-color: color-mix(
        in sRGB,
        var(--modus-wc-color-red) 50%,
        transparent
      );
      border-color: var(--modus-wc-color-red);
      color: var(--modus-wc-color-gray-light);
    }

    &.upload-success {
      background-color: color-mix(
        in sRGB,
        var(--modus-wc-color-green) 50%,
        transparent
      );
      border-color: var(--modus-wc-color-green);
      color: var(--modus-wc-color-gray-light);
    }
  }

  &:has(input:disabled) {
    .dropzone-content {
      background-color: var(--modus-wc-color-gray-9);
      border-color: var(--modus-wc-color-gray-3);
      color: var(--modus-wc-color-gray-6);
      cursor: not-allowed;
    }
  }
}

